# security-hub-to-slack

./: Cargo.toml  README.md
aws-contact-manager/: Cargo.toml
aws-contact-manager/src/: errors.rs  main.rs
image-icons/: spec.txt
scp-generator/: Cargo.toml  LICENSE  README.md  config.toml  download_templates.sh
scp-generator/scp-templates/amazon-ec2/: Require-Amazon-EC2-instances-to-use-a-specific-type.json
scp-generator/scp-templates/amazon-q-developer/: Deny-actions-invoked-through-Amazon-Q-Developer-in-chat-applications-configurations.json
scp-generator/scp-templates/amazon-s3/: Deny-ACL-disablement-for-all-new-buckets.json  Deny-ACL-disablement-for-all-new-buckets.metadata.json  Deny-users-from-deleting-Amazon-S3-buckets-or-objects.metadata.json  Deny-users-from-modifying-S3-Block-Public-Access-bucket-level.metadata.json  Prevent-Amazon-S3-unencrypted-object-uploads.json
scp-generator/scp-templates/privileged-access-controls/: Deny-AWS-CLI-login-using-console-credentials.json  Deny-member-accounts-from-leaving-your-AWS-organization.json  Prevent-creating-or-expanding-public-connectivity-for-VPCs.json
scp-generator/scp-templates/protect-cloud-platform-resource/: Deny-users-from-deleting-Amazon-VPC-flow-logs.json
scp-generator/scp-templates/region-controls/: Deny-access-to-AWS-based-on-the-requested-AWS-region.json
scp-generator/scp-templates/security-services/: Deny-users-from-disabling-Amazon-GuardDuty-or-modifying-its-configuration.json
scp-generator/src/: loader.rs  main.rs  models.rs  models_test.rs  ui.rs  utils.rs
slack-event/: Cargo.toml  README.md
slack-event/src/: main.rs  sns-client.rs
slack-security-hub/: Cargo.toml
slack-security-hub/src/: main.rs  slack_client.rs  struct_event.rs  utils.rs
slack_event/: Cargo.toml
slack_event/src/: http_handler.rs  slack_client.rs
src/: event_handler.rs  slack_client.rs  struct_event.rs
