[package]
name = "slack-security-hub"
version = "0.1.0"
edition = "2021"

[dependencies]
aws_lambda_events = { version = "1.0.0", default-features = false, features = ["eventbridge"] }
aws-config = "1.8"
lambda_runtime = "1.0.1"
reqwest = { version = "0.13.2", features = ["json", "form"] }
tokio = { version = "1", features = ["macros"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
aws-sdk-secretsmanager = "1.99.0"
