[workspace]
members = ["slack-event", "slack-security-hub"]
resolver = "2"

[workspace.package]
version = "0.1.0"
authors = ["Esteban Perez"]
edition = "2021"
license = "MIT"

[workspace.dependencies]
aws-config = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
