[package]
name = "aws-contact-manager"
version = "0.1.0"
edition = "2024"

[dependencies]
aws-config = { version = "1", features = ["behavior-version-latest"] }
aws-sdk-account = "1"
aws-sdk-organizations = "1"
aws-sdk-s3 = "1"
aws-sdk-sts = "1"
tokio = { version = "1", features = ["full"] }
dialoguer = "0.12.0"
console = "0.16.2"
colored = "3"
serde_json = "1"
chrono = "0.4"
log = "0.4"
env_logger = "0.11"
thiserror = "2.0.18"
