[package]
name = "scp-generator"
version = "0.1.0"
edition = "2021"

[dependencies]
aws-config = "1.1"
aws-sdk-organizations = "1.13"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
clap = { version = "4.0", features = ["derive"] }
colored = "2.0"
dialoguer = "0.11"
walkdir = "2.4"
tokio = { version = "1", features = ["full"] }