[package]
name = "slack-event"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio.workspace = true
aws-config.workspace = true
serde.workspace = true
serde_json.workspace = true
aws-sdk-sns = "1.0"
lambda_http = "1.0.0"
aws-sdk-secretsmanager = "1.99.0"
reqwest = { version = "0.13.2", features = ["json", "form"] }
