[package]
name = "slack-event"
version = "0.1.0"
edition = "2024"

[dependencies]
aws-config = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
aws-sdk-sns = "1.0"
lambda_http = "1.0.0"
aws-sdk-secretsmanager = "1.99.0"
reqwest = { version = "0.13.2", features = ["json", "form"] }
tokio = { version = "1.0", features = ["full"] }
