[package]
name = "slack-security-hub"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio.workspace = true
aws-config.workspace = true
serde.workspace = true
serde_json.workspace = true
aws_lambda_events = { version = "1.0.0", default-features = false, features = ["eventbridge"] }
lambda_runtime = "1.0.1"
reqwest = { version = "0.13.2", features = ["json", "form"] }
aws-sdk-secretsmanager = "1.99.0"