[package]
name = "slack-security-hub"
version = "0.1.0"
edition = "2024"

[dependencies]
aws-config = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
aws_lambda_events = { version = "1.0.0", default-features = false, features = ["eventbridge"] }
lambda_runtime = "1.0.1"
reqwest = { version = "0.13.2", features = ["json", "form"] }
aws-sdk-secretsmanager = "1.99.0"
tokio = { version = "1.0", features = ["full"] }
chrono = "0.4.43"
