[package]
name = "slack_event"
version = "0.1.0"
edition = "2021"

[dependencies]
lambda_http = "1.0.0"
aws-sdk-secretsmanager = "1.99.0"
aws-config = "1.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.13.2", features = ["json", "form"] }
tokio = { version = "1", features = ["macros"] }
